Summary of important user-visible changes for instrument-control 0.7.0+
-------------------------------------------------------------------
  ** Updated common functions
     fread - set correct size of uint16

Summary of important user-visible changes for instrument-control 0.7.0
-------------------------------------------------------------------

  ** Update get function for instrument controls to not use cellfun (Bug #59581)

  ** UDPPORT: Added new udpport class

  ** TCPCLIENT:  Added new tcpclient class

  ** SERIALPORT: update property access to proper case usage

Summary of important user-visible changes for instrument-control 0.6.0
-------------------------------------------------------------------

  ** SPI: added new spi object and functions

  ** TCP: 
    added tcpclient, deprecated tcpip

    added methods flush, read, write

  ** UDP: 
    added methods flush, read, write

Summary of important user-visible changes for instrument-control 0.5.0
-------------------------------------------------------------------

  ** General updates to support Octave 6+

  ** Added common functions
     flushinput
     flushoutput
     instrhelp
 
  ** SERIALPORT: added new serialport object and functions

  ** SERIAL: use extended win32 serial name for comports so > 10 work.

     New serial functions:
        serialbreak

     Added overload functions for: 
        fprintf
        fread
        fwrite

     Added properties:
        port

     Added .property access

  ** UDP: add .property access to the object

     Added properties:
        localhost

     Updates property timeout to be seconds

     Updated udp constructor to be closer to matlab compatible

  ** TCP: add .property access to the object

     Updates property timeout to be seconds

     Updated constructor to be closer to matlab compatible

  ** I2C: 
     Implement object properties 

     Added overload functions for: 
        fread
        fwrite
        get
        set

  ** PARALLEL: